z-index fix

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -65,7 +65,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 999;
+    z-index: 2002;
 }
 
 .popup {
